--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numpy==2.2.4
 pandas==2.2.3
 Pillow==11.1.0
 plotly==5.24.1
-Requests==2.32.3
+requests==2.32.3
 scikit_learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
